# quicksight-bulk-update-datasets

./: README.md  pyproject.toml  quicksight-bulk-update-datasets.py  quicksight_bulk_update_datasets.py  test_quicksight_bulk_update_datasets.py
.github/workflows/: deploy-package-to-pypi.yml  test.yml
