[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quicksight-bulk-update-datasets"
version = "0.0.0.dev0"
authors = [
  { name="Department for Business and Trade", email="sre@digital.trade.gov.uk" },
]
description = "CLI to make bulk updates to Quicksight datasets"
readme = "README.md"
requires-python = ">=3.6.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "boto3>=1.34.52",
    "typer>=0.9.0",
]

[project.urls]
"Source" = "https://github.com/uktrade/quicksight-bulk-update-datasets"

[tool.hatch.build]
include = [
  "quicksight_bulk_update_datasets.py",
]

[project.scripts]
quicksight-bulk-update-datasets = "quicksight_bulk_update_datasets:app"
